# We use this just for the black code formater to prevent it from
#  replacing single quotes with double quotes in timelink/__init__.py
#  because it breaks bump2version
#     see https://github.com/oceanprotocol/ocean.py/issues/194
[tool.black]
line-length = 120
exclude = '__init__.py'
extend-immutable-calls = 'Depends, fastapi.Depends, fastapi.params.Depends'

[tool.poetry]
name = "timelink"
# ... other poetry configuration ...

[tool.poetry.include]
"timelink/migrations/versions/*" = {format = "sdist", extension = "py"}

